--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,12 @@
 <body>
 
 <h1>Hello World from base.html</h1>
+
+<form action="articles" method="get">
+    <input type="text" name="q"/>
+    <input type="submit"/>
+</form>
+
 {% block content %}
 <h3>This will be replaced</h3>
 {% endblock content %}
