Fix action from search form

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
 <h1>Hello World from base.html</h1>
 
-<form action="articles" method="get">
+<form action="/articles/" method="get">
     <input type="text" name="q"/>
     <input type="submit"/>
 </form>
