Change submit input to submit button in form

--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
 
             <p>Are you sure you want to logout?</p>
-            <input type="submit" name="yes" placeholder="Yes">
+            <button type="submit">Yes, logout</button>
         </form>
     </div>
 {% else %}
