--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <form action="/articles/" method="get">
     <input type="text" name="q"/>
-    <input type="submit"/>
+    <button type="submit">Enter</button>
 </form>
 
 {% block content %}
