--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,7 +20,7 @@
                 <input type="password" name="password" placeholder="Password">
             </div>
 
-            <input type="submit" placeholder="Login">
+            <button type="submit">Login</button>
         </form>
     </div>
 {% else %}
