--- a/templates/articles/create.html
+++ b/templates/articles/create.html
@@ -3,17 +3,12 @@
 {% block content %}
 
 {% if not created %}
+
   <div style="margin-top:30px">
     <form action="." method="post">
       {% csrf_token %}
 
-      <div>
-        <input type="text" name="title" placeholder="Title"/>
-      </div>
-
-      <div style="margin-top:30px">
-        <textarea name="content" placeholder="Content"></textarea>
-      </div>
+      {{ form.as_p }}
 
       <div style="margin-top:30px">
         <input type="submit" value="Create article"/>
