--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,6 +22,8 @@
 
             <button type="submit">Login</button>
         </form>
+
+        <p>Don't have an account? Please <a href="/register/">register</a></p>
     </div>
 {% else %}
     <p>You are already logged in. Would you like to <a href="/logout/">logout</a>?</p>
