--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,18 +7,7 @@
         <form method="post">
             {% csrf_token %}
 
-            {% if error %}
-                <p style="color: red">{{ error }}</p>
-            {% endif %}
-
-            <div>
-                <input type="text" name="username"
-                       placeholder="Username"/>
-            </div>
-
-            <div>
-                <input type="password" name="password" placeholder="Password">
-            </div>
+            {{ form.as_p }}
 
             <button type="submit">Login</button>
         </form>
