--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,29 @@
 
 <h1>Hello World from base.html</h1>
 
+<nav>
+    <ul>
+        <li>
+            <a href="/home/">Home</a>
+        </li>
+
+        {% if not request.user.is_authenticated %}
+            <li>
+                <a href="/login/">Login</a>
+            </li>
+
+            <li>
+                <a href="/register/">Register</a>
+            </li>
+        {% else %}
+            <li>
+                <a href="/logout/">Logout</a>
+            </li>
+        {% endif %}
+
+    </ul>
+</nav>
+
 <form action="/articles/" method="get">
     <input type="text" name="q"/>
     <button type="submit">Enter</button>
