--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -6,7 +6,7 @@
 <ul>
     {% for article in object_list %}
         <li>
-            <a href="/articles/{{ article.id }}/">{{ article.title }} - {{ article.content }}</a>
+            <a href="/articles/{{ article.slug }}/">{{ article.title }} - {{ article.content }}</a>
         </li>
     {% endfor %}
 </ul>
