--- a/templates/home-view.html
+++ b/templates/home-view.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <a href="{% url 'articles:create' %}">Create article</a>
+<a href="{% url 'recipes:list' %}">Recipes</a>
 <a href="{% url 'articles:detail' slug='hello-world' %}">Highlight hello world</a>
 
 <p>Article list</p>
