--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -10,6 +10,11 @@
     <form action="." method="post">
     {% csrf_token %}
     {{ form.as_p }}
+
+    {% if formset %}
+        <h2>Ingredients</h2>
+        {{ formset.as_p }}
+    {% endif %}
     
     <button style="margin-top:30px" type="submit">Save</button>
     </form>
