--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -16,37 +16,7 @@
 {% endif %}
 
 <div style="margin-top:30px">
-    <form action="." method="post">
-    {% csrf_token %}
-
-    {% for field in form %}
-        <div class='{% if field.field.required %}{{ form.required_css_class }}{% endif %}'>
-            {{field.errors}}
-            {{field.label_tag}} {{ field }}
-
-            {% if field.help_text %}
-                <p class='help'> {{ field.help_text|safe}} </p>
-            {% endif %}
-        </div>
-    {% endfor %}
-
-    {% if formset %}
-        <h2>Ingredients</h2>
-        {{ formset.management_form }}
-        <div id="ingredient-form-list">
-            {% for form in formset %}
-                <div class='ingredient-form'>
-                    {{ form.as_p }}
-                </div>
-            {% endfor %}
-        </div>
-
-        <div id='empty-form' class='hidden'>{{ formset.empty_form.as_p }}</div>
-        <button id='add-more' type='button' on>Add more</button>
-    {% endif %}
-    
-    <button style="margin-top:30px" type="submit">Save</button>
-    </form>
+    {% include 'recipes/partials/forms.html' %}
 </div>
 
 <script>
