--- a/templates/recipes/detail.html
+++ b/templates/recipes/detail.html
@@ -1,23 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>
-    {{ object.name }} 
-    {% if object.get_edit_url %}
-        <small><a href="{{ object.get_edit_url }}">Edit</a></small>
-    {% endif %}
-</h1>
-<p>{{ object.description }}</p>
-<p>{{ object.directions }}</p>
 
-<ul>
-    {% for ingredient in object.get_ingredients %}
-        <li>
-            {{ ingredient.name }}
-        </li>
-        <p>{{ ingredient.as_imperial }}</p>
-        <p>{{ ingredient.as_mks }}</p>
-    {% endfor %}
-</ul>
+<div hx-get='{{ hx_url }}' hx-trigger='revealed'>
+    <div class='htmx-indicator'>Loading...</div>
+</div>
 
 {% endblock content %}
