--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://unpkg.com/htmx.org@1.5.0"></script>
+    <style>
+        .htmx-indicator{
+            display: none
+        }
+        .htmx-request .htmx-indicator{
+            display: inline
+        }
+        .htmx-inverted-indicator{
+            display: inline
+        }
+        .htmx-request .htmx-inverted-indicator{
+            display: none
+        }
+    </style>
 </head>
 <body>
 
