--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -20,17 +20,20 @@
 </div>
 
 <script>
-    const addMoreButton = document.getElementById('add-more');
-    const totalNewForm = document.getElementById('id_form-TOTAL_FORMS');
-
-    addMoreButton.addEventListener('click', addNewForm);
+    document.addEventListener('click', (event) => {
+        if(event.target.id == 'add-more'){
+            addNewForm(event);
+        }
+    });
 
     function addNewForm(event){
+        const totalNewForm = document.getElementById('id_form-TOTAL_FORMS');
+        
         if(event){
             // To prevent submit type in button
             event.preventDefault();
         }
-        
+
         const currentIngredientForms = document.getElementsByClassName('ingredient-form');
         const currentFormCount = currentIngredientForms.length;
 
