--- a/templates/recipes/partials/forms.html
+++ b/templates/recipes/partials/forms.html
@@ -1,8 +1,4 @@
 <form action="." method="post" hx-post='.' hx-swap='outerHTML'>
-    {% if message %}
-        <p>{{ message }}</p>
-    {% endif %}
-
     {% csrf_token %}
 
     {% for field in form %}
@@ -31,5 +27,9 @@
         <button id='add-more' type='button'>Add more</button>
     {% endif %}
     
-    <button style="margin-top:30px" type="submit">Save</button>
+    <div class='htmx-indicator'>Loading...</div>
+    <button class='htmx-inverted-indicator' style="margin-top:30px" type="submit">Save</button>
+    {% if message %}
+        <p>{{ message }}</p>
+    {% endif %}
 </form>
