Add create ingredient button and form inline

--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -17,6 +17,17 @@
 
 <div style="margin-top:30px">
     {% include 'recipes/partials/forms.html' %}
+
+    <h3>Ingredients</h3>
+    {% for ingredient in object.get_ingredients %}
+        {% include 'recipes/partials/ingredient-inline.html' with object=ingredient %}
+    {% endfor %}
+
+    {% if new_ingredient_url %}
+        <div id ='ingredient-create'></div>
+
+        <button hx-get = {{ new_ingredient_url}} hx-trigger='click' hx-target='#ingredient-create' hx-swap='beforeend'>Add ingredient</button>
+    {% endif %}
 </div>
 
 <script>
@@ -28,7 +39,7 @@
 
     function addNewForm(event){
         const totalNewForm = document.getElementById('id_form-TOTAL_FORMS');
-        
+
         if(event){
             // To prevent submit type in button
             event.preventDefault();
