--- a/templates/base.html
+++ b/templates/base.html
@@ -46,10 +46,7 @@
     </ul>
 </nav>
 
-<form action="/articles/" method="get">
-    <input type="text" name="q"/>
-    <button type="submit">Enter</button>
-</form>
+{% include 'search/search-form.html' %}
 
 {% block content %}
 <h3>This will be replaced</h3>
