--- a/templates/recipes/partials/detail.html
+++ b/templates/recipes/partials/detail.html
@@ -2,6 +2,7 @@
     {{ object.name }} 
     {% if object.get_edit_url %}
         <small><a href="{{ object.get_edit_url }}">Edit</a></small>
+        <small><a href="{{ object.get_delete_url }}">Delete</a></small>
     {% endif %}
 </h1>
 <p>{{ object.description }}</p>
