--- a/templates/recipes/partials/forms.html
+++ b/templates/recipes/partials/forms.html
@@ -14,6 +14,7 @@
     
     <div class='htmx-indicator'>Loading...</div>
     <button class='htmx-inverted-indicator' style="margin-top:30px" type="submit">Save</button>
+    <a href="{{ object.get_delete_url }}">Delete</a>
     {% if message %}
         <p>{{ message }}</p>
     {% endif %}
