--- a/templates/base.html
+++ b/templates/base.html
@@ -52,5 +52,10 @@
 <h3>This will be replaced</h3>
 {% endblock content %}
 
+<script>
+    document.body.addEventListener("htmx:configRequest", (event) => {
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
+    })
+</script>
 </body>
 </html>
