--- a/templates/recipes/partials/detail.html
+++ b/templates/recipes/partials/detail.html
@@ -1,8 +1,13 @@
 <h1>
     {{ object.name }} 
     {% if object.get_edit_url %}
-        <small><a href="{{ object.get_edit_url }}">Edit</a></small>
-        <small><a href="{{ object.get_delete_url }}">Delete</a></small>
+        <small>
+            <a href="{{ object.get_edit_url }}">Edit</a>
+            <a href="{{ object.get_delete_url }}" 
+                hx-post='{{ object.get_delete_url }}'
+                hx-confirm='Are you sure you want to delete {{ object.name }}?' 
+                hx-trigger='click'"}'>Delete</a>
+        </small>
     {% endif %}
 </h1>
 <p>{{ object.description }}</p>
