--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://unpkg.com/htmx.org@1.5.0"></script>
-    <style>
-        .htmx-indicator{
-            display: none
-        }
-        .htmx-request .htmx-indicator{
-            display: inline
-        }
-        .htmx-inverted-indicator{
-            display: inline
-        }
-        .htmx-request .htmx-inverted-indicator{
-            display: none
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'recipes/recipes-htmx.css' %}">
 </head>
 <body>
 
 <h1>Hello World from base.html</h1>
+{% static 'recipes/recipes-htmx.css' %}
 
 <nav>
     <ul>
