--- a/templates/recipes/partials/ingredient-form.html
+++ b/templates/recipes/partials/ingredient-form.html
@@ -3,5 +3,6 @@
     {{ form.as_p }}
     
     <div class='htmx-indicator'>Loading...</div>
-    <button class='htmx-inverted-indicator' style="margin-top:30px" type="submit">Save</button>
+    <button class="btn btn-outline-success htmx-inverted-indicator mb-2" 
+        type="submit">Save</button>
 </form>
