--- a/templates/search/search-form.html
+++ b/templates/search/search-form.html
@@ -1,5 +1,5 @@
-<form action="/search/" method="get">
-    <select name="type" id='search-type' hx-get='/search/' hx-trigger='change delay:200ms' hx-include='#search-query' hx-target='#typeahead-results'>
+<form class="d-flex" action="/search/" method="get">
+    <select class='form-control' name="type" id='search-type' hx-get='/search/' hx-trigger='change delay:200ms' hx-include='#search-query' hx-target='#typeahead-results'>
 
         {% if request.GET.type == 'article' %}
             <option value="article" selected>Articles</option>
@@ -10,13 +10,16 @@
         {% if request.GET.type == 'recipe' %}
             <option value="recipe" selected>Recipes</option>
         {% else %}
-            <option value="recipe">Recipes</option>
+            <option value="recipe" selected>Recipes</option>
         {% endif %}
     </select>
 
-    <input type="text" id='search-query' name="q" value='{{ request.GET.q }}' hx-get='/search/' hx-trigger='keyup change delay:200ms' hx-include='#search-type' hx-target='#typeahead-results'/>
+    <input class="form-control me-2" type="text" id='search-query' name="q" 
+        value='{{ request.GET.q }}' 
+        hx-get='/search/' hx-trigger='keyup change delay:200ms' 
+        hx-include='#search-type' hx-target='#typeahead-results'/>
     
-    <button type="submit">Enter</button>
+    <button class="btn btn-outline-success" type="submit">Search</button>
 
     <div id='typeahead-results'></div>
 </form>
