--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 {% if not request.user.is_authenticated %}
-    <div style="margin-top:30px">
+    <h1>Login</h1>
+    <div>
         <form method="post">
             {% csrf_token %}
 
             {{ form.as_p }}
 
-            <button type="submit">Login</button>
+            <button class="btn btn-outline-success" type="submit">Login</button>
         </form>
 
         <p>Don't have an account? Please <a href="/register/">register</a></p>
