--- a/templates/base.html
+++ b/templates/base.html
@@ -2,49 +2,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Title</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <script src="https://unpkg.com/htmx.org@1.5.0"></script>
     <link rel="stylesheet" href="{% static 'recipes/recipes-htmx.css' %}">
 </head>
 <body>
 
-<h1>Hello World from base.html</h1>
-{% static 'recipes/recipes-htmx.css' %}
+    {% include 'base/navbar.html' %}
 
-<nav>
-    <ul>
-        <li>
-            <a href="/home/">Home</a>
-        </li>
+    <div class='container'>
+        {% block content %}
+            <h3>This will be replaced</h3>
+        {% endblock content %}
+    </div>
 
-        {% if not request.user.is_authenticated %}
-            <li>
-                <a href="/login/">Login</a>
-            </li>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-            <li>
-                <a href="/register/">Register</a>
-            </li>
-        {% else %}
-            <li>
-                <a href="/logout/">Logout</a>
-            </li>
-        {% endif %}
-
-    </ul>
-</nav>
-
-{% include 'search/search-form.html' %}
-
-{% block content %}
-<h3>This will be replaced</h3>
-{% endblock content %}
-
-<script>
-    document.body.addEventListener("htmx:configRequest", (event) => {
-        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
-    })
-</script>
+    <script>
+        document.body.addEventListener("htmx:configRequest", (event) => {
+            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}'
+        })
+    </script>
 </body>
 </html>
