--- a/templates/recipes/create-update.html
+++ b/templates/recipes/create-update.html
@@ -15,22 +15,35 @@
     <p>{{ message }}</p>
 {% endif %}
 
-<div style="margin-top:30px">
-    {% include 'recipes/partials/forms.html' %}
+<div class="row">
+    <div class="{% if object.id %} col-12 col-md-8 {% else %} col-md-6 mx-auto {% endif %}">
+        {% if not object.id %}
+            <h1>Create Recipe </h1>
+        {% else %}
+            <h1>Update Recipe </h1>
+        {% endif %}
+        
+        {% include 'recipes/partials/forms.html' %}
+    </div>
     
-    <div hx-get='{{ object.get_image_upload_url }}' hx-trigger='revealed'></div>
+    <div class="{% if object.id %} col-12 col-md-4 {% else %} d-none {% endif %}">
+        <h3>Ingredients</h3>
+        
+        <div hx-get='{{ object.get_image_upload_url }}' hx-trigger='revealed'></div>
 
-    <h3>Ingredients</h3>
-    {% for ingredient in object.get_ingredients %}
-        {% include 'recipes/partials/ingredient-inline.html' with object=ingredient %}
-    {% endfor %}
+        {% for ingredient in object.get_ingredients %}
+            {% include 'recipes/partials/ingredient-inline.html' with object=ingredient %}
+        {% endfor %}
 
-    {% if new_ingredient_url %}
-        <div id ='ingredient-create'></div>
+        {% if new_ingredient_url %}
+            <div id ='ingredient-create'></div>
 
-        <button hx-get = {{ new_ingredient_url}} hx-trigger='click' hx-target='#ingredient-create' hx-swap='beforeend'>Add ingredient</button>
-    {% endif %}
-</div>
+            <button class="btn btn-outline-success" 
+                hx-get={{ new_ingredient_url}} 
+                hx-trigger='click' hx-target='#ingredient-create' 
+                hx-swap='beforeend'>Add ingredient</button>
+        {% endif %}
+    </div>
 
 <script>
     document.addEventListener('click', (event) => {
