--- a/templates/recipes/partials/forms.html
+++ b/templates/recipes/partials/forms.html
@@ -13,8 +13,11 @@
     {% endfor %}
     
     <div class='htmx-indicator'>Loading...</div>
-    <button class='htmx-inverted-indicator' style="margin-top:30px" type="submit">Save</button>
-    <a href="{{ object.get_delete_url }}">Delete</a>
+    
+    <div class="mt-3">
+        <button class='btn btn-outline-success htmx-inverted-indicator' type="submit">Save</button>
+        <a class="btn btn-outline-danger" href="{{ object.get_delete_url }}">Delete</a>
+    </div>
     {% if message %}
         <p>{{ message }}</p>
     {% endif %}
