--- a/templates/meals/partials/queue-toggle.html
+++ b/templates/meals/partials/queue-toggle.html
@@ -1,7 +1,7 @@
 <form action="." method="post" enctype="multipart/form-data"
     hx-post='{% url "meal-toggle" recipe_id=recipe_id %}'
     hx-encoding="multipart/form-data">
-
+    {% csrf_token %}
     <button type='submit'
         class="btn {% if is_pending %} btn-outline-secondary {% else %} btn-primary {% endif %}">
         {{ toggle_label }}
