--- a/templates/recipes/list.html
+++ b/templates/recipes/list.html
@@ -4,9 +4,11 @@
 <h1>My Recipes</h1>
 
 <h3><a href="{% url 'recipes:create' %}">Add Recipe</a></h3>
+<hr/>
+
 {% for recipe in object_list %}
-    <div>
-        <a href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a>
+    <div class='mb-3'>
+        <a class='lead' href="{{ recipe.get_absolute_url }}">{{ recipe.name }}</a>
         <div hx-get='{% url "meal-toggle" recipe_id=recipe.id %}'
             hx-trigger='revealed'></div>
     </div>
